# photo-book

./: .gitignore  Cargo.toml
.zed/: debug.json
obsidian/PhotoBook/.obsidian/: workspace.json
obsidian/PhotoBook/Tasks/: Bugs.md  Improvements.md
src/: assets.rs  async_retained_image.rs  auto_persisting.rs  autosave_manager.rs  config.rs  cursor_manager.rs  debug.rs  dependencies.rs  dirs.rs  event_bus.rs  export.rs  file_tree.rs  font_manager.rs  gallery_service.rs  history.rs  icon.rs  id.rs  image_cache.rs  main.rs  modal.rs  photo.rs  photo_database.rs  photo_manager.rs  project.rs  project_settings.rs  session.rs  string_log.rs  theme.rs  thumbnail_cache.rs  utils.rs
src/assets/: resize.png~  rotate.png~
src/layout/: grid_layout.rs  mod.rs  stack_layout.rs
src/modal/: basic.rs  custom.rs  manager.rs  mod.rs  page_settings.rs  photo_filter.rs  progress.rs  save_warning.rs
src/model/: edit_state.rs  editable_value.rs  mod.rs  page.rs  photo_grouping.rs  scale_mode.rs  unit.rs
src/persistence/: model.rs
src/project/: v1.rs
src/scene/: canvas_scene.rs  crop_scene.rs  mod.rs  organize.rs  organize_edit_scene.rs  organize_scene.rs  viewer_scene.rs
src/template/: mod.rs
src/widget/: action_bar.rs  auto_center.rs  canvas.rs  canvas_state.rs  chip.rs  chip_collection.rs  crop.rs  file_tree.rs  gallery_image.rs  image_gallery.rs  image_viewer.rs  mod.rs  page_canvas.rs  pages.rs  photo_filter.rs  photo_info.rs  placeholder.rs  segment_control.rs  spacer.rs  tag_chips.rs  templates.rs  toolbar.rs  transformable.rs
src/widget/canvas/: mod.rs  selection.rs  state.rs  types.rs
src/widget/canvas_info/: alignment.rs  history_info.rs  layers.rs  line_edit_control.rs  line_tool_control.rs  mod.rs  page_info.rs  panel.rs  quick_layout.rs  scale_mode.rs  shape_edit_control.rs  shape_tool_control.rs  text_control.rs  text_edit_control.rs  text_tool_control.rs  transform_control.rs
