[package]
name = "photobook-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
debug_dependency_locks = []

[dependencies]
# re_ui = "0.23.1"
# egui = { version = "0.32.3" }
egui = { path = "../egui/crates/egui" }
eframe = { path = "../egui/crates/eframe", features = ["glow", "wgpu"] }
egui_extras = { path = "../egui/crates/egui_extras", features = [
    "default",
    "all_loaders",
] }
# eframe = { version = "0.32.3", features = ["glow", "wgpu"] }
# egui_extras = { version = "0.32.3", features = ["default", "all_loaders"] }
native-dialog = "0.9.0"
env_logger = "0.11.8"
image = { version = "0.25.8", features = ["jpeg", "png"] }
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread"] }
once_cell = "1.21.3"
fast_image_resize = "5.3.0"
anyhow = "1.0.100"
flexi_logger = "0.31.5"
log = "0.4"
kamadak-exif = "0.6.1"
imagesize = "0.14.0"
backtrace = "0.3"
open = "5.3.2"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
chrono = { version = "0.4.42", features = ["serde"] }
indexmap = { version = "2.11.4", features = ["serde"] }
font-kit = "0.14.3"
egui_tiles = "0.14.0"
ab_glyph = "0.2.32"
rand = "0.9.2"
smol_egui_skia = { git = "https://github.com/RyanBluth/smol_egui_skia.git", branch = "main" }
skia-safe = { version = "0.90", features = ["vulkan"] }
wgpu = { version = "27.0.1", features = ["vulkan", "metal", "dx12", "gles"] }
thiserror = "2.0.17"
printpdf = { version = "0.8.2", features = ["jpeg", "png"] }
serde = "1.0.228"
serde_json = "1.0.145"
dirs = "6.0.0"
fxhash = "0.2.1"
toml = "0.9.7"
glob = "0.3.3"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
profiling = { version = "1.0.17", default-features = false }
notify = "8.2.0"
num_cpus = "1.17.0"
rkyv = "0.8.12"
savefile = { version = "0.20.1", features = ["bzip2", "serde"] }
savefile-derive = "0.20.1"

[dev-dependencies]
egui_kittest = { version = "0.33.2", features = ["wgpu", "snapshot"] }

[profile.dev.package."*"]
opt-level = 2

[profile.release]
# lto = "fat"
codegen-units = 1
panic = "abort"


[patch.crates-io]
egui_kittest = { path = "../egui/crates/egui_kittest" }
egui = { path = "../egui/crates/egui"}
eframe = { path = "../egui/crates/eframe"}
egui_extras = { path = "../egui/crates/egui_extras"}
emath = { path = "../egui/crates/emath"}
epaint = { path = "../egui/crates/epaint"}
ecolor = { path = "../egui/crates/ecolor"}
# eframe = { git = "https://github.com/RyanBluth/egui.git", branch = "master", features = ["glow"] }
# egui_extras = { git = "https://github.com/RyanBluth/egui.git", branch = "master", features = ["default", "all_loaders"] }
